// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders custom component 1`] = `
<div
  className="main-header"
>
  <div />
</div>
`;

exports[`renders default 1`] = `
<header
  className="main-header"
>
  <div />
</header>
`;
